Table "goose_db_version" {
  "id" int4 [pk, not null, increment]
  "version_id" int8 [not null]
  "is_applied" bool [not null]
  "tstamp" timestamp [not null, default: `now()`]
}

Table "users" {
  "id" uuid [pk, not null]
  "email" text [unique, not null]
  "full_name" text [not null, default: '']
  "password_hash" text
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "links" {
  "id" uuid [pk, not null]
  "user_id" uuid [not null]
  "slug" text [unique, not null]
  "destination_url" text [not null]
  "title" text [not null, default: '']
  "is_custom_slug" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "clicks" {
  "id" uuid [pk, not null]
  "link_id" uuid [not null]
  "clicked_at" timestamptz [not null]
  "ip_address" inet
  "referrer" text
  "referrer_host" text
  "country_code" text
  "user_agent" text

  Indexes {
    (link_id, clicked_at) [type: btree, name: "clicks_link_id_clicked_at_idx"]
  }
}

Ref "clicks_link_id_fkey":"links"."id" < "clicks"."link_id" [delete: cascade]

Ref "links_user_id_fkey":"users"."id" < "links"."user_id" [delete: cascade]
